# plank-tray-docklet

./: README.md
data/: plank-toggle
data/ui/: preferences.ui
docklets/: meson.build
docklets/Applications/: ApplicationsDockItem.vala
docklets/Clippy/: clippy.gresource.xml  meson.build
docklets/Clock/: ClockDocklet.vala  clock.gresource.xml
docklets/NowPlaying/: NowPlayingDockItem.vala  NowPlayingDocklet.vala  PLAN.md  meson.build  nowplaying.gresource.xml
docklets/RecentFiles/: PLAN.md  RecentFilesDockItem.vala  RecentFilesDocklet.vala  RecentFilesPreferences.vala  meson.build  recentfiles.gresource.xml
docklets/Stacks/: PLAN.md  StacksDockItem.vala  StacksDocklet.vala  StacksPreferences.vala  meson.build  stacks.gresource.xml
docklets/Tray/: PLAN.md  TrayDockItem.vala  TrayDocklet.vala  meson.build  tray.gresource.xml
lib/: DBusManager.vala  DragManager.vala  meson.build
lib/DBus/: Interfaces.vala
lib/Docklets/: DockletItem.vala
lib/Factories/: AbstractMain.vala  ItemFactory.vala
lib/Items/: ApplicationDockItemProvider.vala  DockItem.vala  DockItemPreferences.vala  DockItemProvider.vala  FolderDockItem.vala
lib/Services/: KeybindingManager.vala  Matcher.vala
lib/Widgets/: PreferencesWindow.vala
scripts/: rebuild-reinstall-local.sh
